<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/t4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:text="@string/choose_image"
                android:textColor="@color/ChooseColor" />

            <ImageView
                android:id="@+id/add_cops_image"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_below="@+id/t4"
                android:layout_centerHorizontal="true"
                android:background="@drawable/image_search"
                android:contentDescription="@string/todo"
                android:scaleType="fitXY"
                tools:ignore="ContentDescription" />

            <EditText
                android:id="@+id/add_cops_headerTitleEng"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/add_cops_image"
                android:layout_marginStart="@dimen/_28sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_28sdp"
                android:autofillHints=""
                android:background="@drawable/outline"
                android:hint="@string/enter_heading_in_english"
                android:inputType="text"
                android:padding="@dimen/_10sdp"
                android:textSize="@dimen/_12ssp"
                android:textAlignment="textStart"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/add_cops_headerTitleSin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/add_cops_headerTitleEng"
                android:layout_marginStart="@dimen/_28sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_28sdp"
                android:autofillHints=""
                android:fontFamily="@font/sarang_sattar_font"
                android:background="@drawable/outline"
                android:hint="@string/titleinsindhi"
                android:inputType="text"
                android:padding="@dimen/_10sdp"
                android:textSize="@dimen/_12ssp" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/add_cops_btnAddCrop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/add_cops_headerTitleSin"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_50sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/button_design"
                android:text="@string/add"
                android:fontFamily="@font/sarang_sattar_font"
                android:textColor="@color/white"
                android:textSize="@dimen/_15ssp"
                tools:ignore="SmallSp" />

            <ProgressBar
                android:id="@+id/add_cops_progressbar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_below="@+id/add_cops_btnAddCrop"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:visibility="gone" />


        </RelativeLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>